# CLife

./: CMakeLists.txt  README.md  copilot.md  mnist_network.txt  mnist_network2.txt  mnist_network3-shuffle.txt  mnist_network6-saved.txt  mnist_network7.txt  net.txt  netw.txt  network.txt  network2.txt  networkRL1.txt  script.md  tekst na prez.md  test.txt  todo.md
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/include/backend/: FileManager.hpp  backend.hpp  exceptions.hpp  namespaces.hpp
src/backend/src/: Database.cpp  FileManager.cpp
src/core/: CMakeLists.txt  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp
src/core/include/core/: BackpropagationData.hpp  CNN.hpp  ConvolutionLayer.hpp  Layer.hpp  LinearModel.hpp  MaxPool.hpp  NeuralNetwork.hpp  Neuron.hpp  OLayer.hpp  ONeural.hpp  activation.hpp  core.hpp  exceptions.hpp  namespaces.hpp  thread.hpp  types.hpp  utils.hpp
src/core/include/core/Activation/: activation.hpp
src/core/src/: CNN.cpp  ConvolutionLayer.cpp  Layer.cpp  LinearModel.cpp  MaxPool.cpp  NeuralNetwork.cpp  Neuron.cpp  OLayer.cpp  OLayer.cu  ONeural.cpp  activation.cpp  thread.cpp  utils.cpp
src/data/: CMakeLists.txt  data.hpp
src/data/include/data/: Data.hpp  DoodlesLoader.hpp  TestData.hpp  data.hpp  namespaces.hpp  types.hpp
src/data/src/: Data.cpp  DoodlesLoader.cpp  TestData.cpp
src/games/: CMakeLists.txt
src/games/include/games/: TicTacToe.hpp  games.hpp  namespaces.hpp
src/games/src/: TicTacToe.cpp
src/mnist/: CMakeLists.txt
src/mnist/digits/: CMakeLists.txt
src/mnist/include/mnist/: loader.hpp  mnist.hpp  namespaces.hpp  transformator.hpp
src/mnist/src/: loader.cpp  transformator.cpp
src/optimizer/: CMakeLists.txt
src/optimizer/include/optimizer/: NeuralNetworkOptimizer.hpp  namespaces.hpp  optimizer.hpp
src/optimizer/src/: NeuralNetworkOptimizer.cpp
src/random-gen/: Random.hpp
src/test-creator/: CMakeLists.txt
src/test-creator/include/test-creator/: TestCreator.hpp  namespaces.hpp
src/test-creator/src/: TestCreator.cpp
src/ui/: CMakeLists.txt  windowWithDrawer.cpp  windowWithDrawer.hpp
src/ui/include/ui/: Drawer.hpp  Plotter.hpp  Visualizer.hpp  namespaces.hpp  ui.hpp  windowWithDrawer.hpp
src/ui/src/: Drawer.cpp  Plotter.cpp  Visualizer.cpp  windowWithDrawer.cpp
tests/: CMakeLists.txt  TestCase.cpp  TestCase.hpp  namespaces.hpp  testCases.hpp  tests.cpp  tests.hpp  unit-tests.cpp
